<resources>
    <string name="app_name">PentagramMY</string>

    <string name="pnombre">Nombre de mascota</string>
    <string name="pmegusta">Cuanto me gusta</string>
    <string name="action_favorite">Ver los 5 favoritos</string>
    <string name="fav5">Los 5 más gustados</string>
    <string name="Contact">Contacto</string>
    <string name="Acerca">Acerca de mi...</string>
    <string name="mFavoritos">5 Favoritos</string>
    <string name="mContacto">Contacto</string>
    <string name="mAcerca">Acerca de</string>
    <string name="mPerfil">Configurar perfil</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user_name">Nombre de usuario</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_mensaje">Mensaje</string>
    <string name="err_msg_name">Captura un nombre</string>
    <string name="err_msg_email">Captura una dirección de correo válida</string>
    <string name="err_msg_mensaje">Captura el mensaje</string>
    <string name="btn_enviar_comentario">Enviar Comentario</string>
    <string name="btn_guardar_usuario">Guardar cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mNotificaciones">Recibir Notificaciones</string>
    <string name="RegistrarNotificaciones">mandar a bd</string>

    <string name="channel_name">canal de importancia</string>
    <string name="channel_description">descirpcion</string>
    <string name="default_notification_channel_id">chanel1</string>
    <string name="default_notification_channel_name">chanel1</string>
    <string name="IdUsuario">digite el usuario de  instagram</string>

</resources>
