<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mFavoritos"
        android:icon="@drawable/star5"
        android:title="@string/mFavoritos"
        android:orderInCategory="10"
        app:showAsAction="always" />
    <item
        android:id="@+id/mContacto"
        android:title="@string/mContacto"
        android:orderInCategory="20"
        app:showAsAction="never"
        >
    </item>
    <item
        android:id="@+id/mAcerca"
        android:title="@string/mAcerca"
        android:orderInCategory="30"
        app:showAsAction="never"
        >
    </item>
    <item
        android:id="@+id/mPerfil"
        android:title="@string/mPerfil"
        android:orderInCategory="30"
        app:showAsAction="never"
        >
    </item>
    <item
        android:id="@+id/mNotificaciones"
        android:title="@string/mNotificaciones"
        android:orderInCategory="30"
        app:showAsAction="never"
        >
    </item>

</menu>