<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <include android:id="@+id/barraSup"
        layout="@layout/barra_superior"
        >

    </include>
    <TextView
        android:id="@+id/tvMasGustados"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Contact"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center" />


    <ScrollView
        android:id="@+id/login_form"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_mensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:hint="@string/hint_mensaje" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_next"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_enviar_comentario"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>